# cutile-lsp

./: .gitignore  README.md  build_ext.sh  kernel.py  package-lock.json  pyproject.toml  test_client.py  test_kernel.py
docs/: README_zh.md  annotation_instructions.md
examples/: kernel.py  lsp_code.py  simple_example.py  test_kernel.py
skills/cutile_annotate/: SKILL.md
skills/pygls_v2/: SKILL.md
src/cutile_lsp/: __main__.py  async_processor.py  constants.py  exec_lsp_code.py  loggings.py
src/cutile_lsp/lsp_pipeline/: HEAD.py  assemble_code.py  construct_input.py  data_structures.py  drive_compiler_pipeline.py  extract_code.py  get_kernels.py  parse_args.py  pipeline.py  type_check.py
vscode_extension/: package-lock.json  package.json
vscode_extension/src/: extension.ts
