[project]
name = "cutile-lsp"
dynamic = ["version"]
description = "Provide cuTile type hints"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Da1sypetals", email = "da1sypetals.iota@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.10, <3.14"

classifiers = ["Intended Audience :: Developers"]

dependencies = [
    "typing-extensions",
    "pygls>=2.0.0",
    "lsprotocol>=2025.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
cutile_lsp = "cutile_lsp.__main__:main"


[tool.ruff]
line-length = 100
target-version = "py313"
